GO/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awbeta-service
spec:
  selector:
    app: awbeta
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  type: NodePort
